CRIMAPP 2130: Bugfix - added appropriate spacing to stop clashing (#1805)

--- a/app/assets/stylesheets/local/sortable-table.scss
+++ b/app/assets/stylesheets/local/sortable-table.scss
@@ -7,8 +7,11 @@
 [aria-sort] button:hover {
 
   position: relative;
+  display: inline-block;
+  max-width: 100%;
   margin: 0;
-  padding: 0 10px 0 0;
+  padding: 0 16px 0 0;
+  white-space: normal;
   border-width: 0;
   color: #005ea5;
   background-color: transparent;
@@ -44,7 +47,7 @@
   content: " \25bc";
   position: absolute;
   top: 9px;
-  right: -1px;
+  right: 0;
   font-size: 0.5em;
 }
 
@@ -53,7 +56,7 @@
   content: " \25b2";
   position: absolute;
   top: 1px;
-  right: -1px;
+  right: 0;
   font-size: 0.5em;
 }
 
@@ -69,7 +72,7 @@
   content: " \25b2";
   position: absolute;
   top: 2px;
-  right: -5px;
+  right: 0;
   font-size: 0.8em;
 }
 
@@ -78,6 +81,6 @@
   content: " \25bc";
   position: absolute;
   top: 2px;
-  right: -5px;
+  right: 0;
   font-size: 0.8em;
 }
